// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`RegistrationConfirmationPage shows error message for duplicate username 1`] = `
<div>
  <div
    id="register-page"
  >
    <div
      class="md-grid"
    >
      <div
        class="md-cell md-cell--12"
      >
        <div
          class="md-paper md-paper--1 md-card md-background--card"
        >
          <div
            class="md-card-title md-card-title--primary"
          >
            <h2
              class="md-card-title--title md-card-title--large md-text"
            >
              Complete Registration
            </h2>
          </div>
          <section
            class="md-card-text"
          >
            <section
              class="md-card-text"
            >
              Please enter the following to complete your registration
            </section>
            <form>
              <section
                class="md-card-text"
              >
                <ul
                  class="error-message"
                />
                <div
                  class="md-text-field-container md-full-width md-text-field-container--disabled md-text-field-container--multiline"
                >
                  <label
                    class="md-floating-label md-floating-label--floating md-text--disabled"
                    for="email"
                  >
                    Email
                  </label>
                  <div
                    class="md-text-field-multiline-container md-text-field--floating-margin"
                    style="height: 0px;"
                  >
                    <span
                      aria-hidden="true"
                    />
                    <textarea
                      aria-hidden="true"
                      class="md-text-field md-text-field--multiline md-full-width md-text--disabled md-text-field--multiline-mask"
                      readonly=""
                      rows="1"
                      tabindex="-1"
                    >
                      a@b.com
                    </textarea>
                    <textarea
                      autocomplete="email"
                      class="md-text-field md-text-field--multiline md-full-width md-text--disabled"
                      disabled=""
                      id="email"
                      rows="1"
                      style="height: 0px;"
                    >
                      a@b.com
                    </textarea>
                  </div>
                  <hr
                    class="md-divider md-divider--text-field md-divider--expand-from-left"
                  />
                </div>
                <div
                  class="md-text-field-container md-full-width md-text-field-container--multiline"
                >
                  <label
                    class="md-floating-label md-floating-label--floating md-text--error"
                    for="username"
                  >
                    Username *
                  </label>
                  <div
                    class="md-text-field-multiline-container md-text-field--floating-margin"
                    style="height: 0px;"
                  >
                    <span
                      aria-hidden="true"
                    />
                    <textarea
                      aria-hidden="true"
                      class="md-text-field md-text-field--multiline md-full-width md-text md-text-field--multiline-mask"
                      readonly=""
                      rows="1"
                      tabindex="-1"
                    >
                      the_username
                    </textarea>
                    <textarea
                      autocomplete="username"
                      class="md-text-field md-text-field--multiline md-full-width md-text"
                      id="username"
                      minlength="3"
                      name="username"
                      required=""
                      rows="1"
                      style="height: 0px;"
                    >
                      the_username
                    </textarea>
                  </div>
                  <hr
                    class="md-divider md-divider--text-field md-divider--expand-from-left md-divider--text-field-error"
                  />
                  <div
                    class="md-text-field-message-container md-full-width md-text--error"
                  >
                    <div
                      aria-hidden="false"
                      class="md-text-field-message md-text-field-message--active"
                    >
                      The username is already in use: the_username
                    </div>
                    <div
                      aria-hidden="true"
                      class="md-text-field-message md-text-field-message--inactive md-text-field-message--counter"
                    >
                      12 / 64
                    </div>
                  </div>
                </div>
                <div
                  class="md-text-field-container md-full-width md-text-field-container--input"
                >
                  <label
                    class="md-floating-label md-floating-label--floating md-text--secondary"
                    for="password"
                  >
                    Password *
                  </label>
                  <input
                    autocomplete="new-password"
                    class="md-text-field md-text-field--inline-indicator md-text-field--floating-margin md-full-width md-text"
                    id="password"
                    minlength="6"
                    name="password"
                    required=""
                    type="password"
                    value="password"
                  />
                  <hr
                    class="md-divider md-divider--text-field md-divider--expand-from-left"
                  />
                  <button
                    class="md-text-field-inline-indicator md-password-btn md-pointer--hover md-text-field-inline-indicator--floating md-text--disabled"
                    type="button"
                  >
                    <i
                      class="md-icon material-icons"
                    >
                      remove_red_eye
                    </i>
                  </button>
                  <div
                    class="md-text-field-message-container md-text-field-message-container--count-only md-text-field-message-container--right-icon-offset md-full-width md-text--disabled"
                  >
                    <div
                      aria-hidden="true"
                      class="md-text-field-message md-text-field-message--inactive md-text-field-message--counter"
                    >
                      8 / 64
                    </div>
                  </div>
                </div>
                <div
                  class="md-text-field-container md-full-width md-text-field-container--multiline"
                >
                  <label
                    class="md-floating-label md-floating-label--floating md-text--secondary"
                    for="long-name"
                  >
                    Full Name *
                  </label>
                  <div
                    class="md-text-field-multiline-container md-text-field--floating-margin"
                    style="height: 0px;"
                  >
                    <span
                      aria-hidden="true"
                    />
                    <textarea
                      aria-hidden="true"
                      class="md-text-field md-text-field--multiline md-full-width md-text md-text-field--multiline-mask"
                      readonly=""
                      rows="1"
                      tabindex="-1"
                    >
                      Testius Maximus IV
                    </textarea>
                    <textarea
                      autocomplete="name"
                      class="md-text-field md-text-field--multiline md-full-width md-text"
                      id="long-name"
                      name="longName"
                      required=""
                      rows="1"
                      style="height: 0px;"
                    >
                      Testius Maximus IV
                    </textarea>
                  </div>
                  <hr
                    class="md-divider md-divider--text-field md-divider--expand-from-left"
                  />
                  <div
                    class="md-text-field-message-container md-text-field-message-container--count-only md-full-width md-text--disabled"
                  >
                    <div
                      aria-hidden="true"
                      class="md-text-field-message md-text-field-message--inactive md-text-field-message--counter"
                    >
                      18 / 64
                    </div>
                  </div>
                </div>
                <div
                  class="md-text-field-container md-full-width md-text-field-container--multiline"
                >
                  <label
                    class="md-floating-label md-floating-label--floating md-text--secondary"
                    for="short-name"
                  >
                    First Name
                  </label>
                  <div
                    class="md-text-field-multiline-container md-text-field--floating-margin"
                    style="height: 0px;"
                  >
                    <span
                      aria-hidden="true"
                    />
                    <textarea
                      aria-hidden="true"
                      class="md-text-field md-text-field--multiline md-full-width md-text md-text-field--multiline-mask"
                      readonly=""
                      rows="1"
                      tabindex="-1"
                    >
                      Testy
                    </textarea>
                    <textarea
                      autocomplete="given-name"
                      class="md-text-field md-text-field--multiline md-full-width md-text"
                      id="short-name"
                      name="shortName"
                      rows="1"
                      style="height: 0px;"
                    >
                      Testy
                    </textarea>
                  </div>
                  <hr
                    class="md-divider md-divider--text-field md-divider--expand-from-left"
                  />
                  <div
                    class="md-text-field-message-container md-text-field-message-container--count-only md-full-width md-text--disabled"
                  >
                    <div
                      aria-hidden="true"
                      class="md-text-field-message md-text-field-message--inactive md-text-field-message--counter"
                    >
                      5 / 32
                    </div>
                  </div>
                </div>
                <div
                  class="md-selection-control-container"
                >
                  <input
                    aria-hidden="true"
                    class="md-selection-control-input"
                    id="does-accept-terms"
                    name="doesAcceptTerms"
                    type="checkbox"
                    value="true"
                  />
                  <label
                    class="md-selection-control-label md-pointer--hover md-text"
                    for="does-accept-terms"
                  >
                    <div
                      aria-checked="true"
                      aria-labelledby="does-accept-terms-label"
                      aria-pressed="true"
                      class="md-fake-btn md-pointer--hover md-fake-btn--no-outline md-selection-control-toggle md-btn md-btn--icon md-text--theme-secondary"
                      role="checkbox"
                      tabindex="0"
                    >
                      <div
                        class="md-ink-container"
                      />
                      <i
                        class="md-icon material-icons md-text--inherit"
                      >
                        check_box
                      </i>
                    </div>
                    <span
                      id="does-accept-terms-label"
                    >
                      <div
                        class=""
                      >
                        I have read and agree to the
                         
                        <a
                          class="text-link"
                          href="/policies/user-agreement"
                          target="_blank"
                        >
                          User Agreement
                        </a>
                         
                        and the
                         
                        <a
                          class="text-link"
                          href="/policies/privacy-policy"
                          target="_blank"
                        >
                          Privacy Policy
                        </a>
                        .
                      </div>
                    </span>
                  </label>
                </div>
                <div
                  class="md-selection-control-container"
                >
                  <input
                    aria-hidden="true"
                    class="md-selection-control-input"
                    id="is-13-years-or-older"
                    name="is13YearsOrOlder"
                    type="checkbox"
                    value="true"
                  />
                  <label
                    class="md-selection-control-label md-pointer--hover md-text"
                    for="is-13-years-or-older"
                  >
                    <div
                      aria-checked="true"
                      aria-labelledby="is-13-years-or-older-label"
                      aria-pressed="true"
                      class="md-fake-btn md-pointer--hover md-fake-btn--no-outline md-selection-control-toggle md-btn md-btn--icon md-text--theme-secondary"
                      role="checkbox"
                      tabindex="0"
                    >
                      <div
                        class="md-ink-container"
                      />
                      <i
                        class="md-icon material-icons md-text--inherit"
                      >
                        check_box
                      </i>
                    </div>
                    <span
                      id="is-13-years-or-older-label"
                    >
                      <div
                        class=""
                      >
                        I am 13 years old or older.
                      </div>
                    </span>
                  </label>
                </div>
                <div
                  class="md-selection-control-container"
                >
                  <input
                    aria-hidden="true"
                    class="md-selection-control-input"
                    id="has-majority-consent"
                    name="hasMajorityConsent"
                    type="checkbox"
                    value="true"
                  />
                  <label
                    class="md-selection-control-label md-pointer--hover md-text"
                    for="has-majority-consent"
                  >
                    <div
                      aria-checked="true"
                      aria-labelledby="has-majority-consent-label"
                      aria-pressed="true"
                      class="md-fake-btn md-pointer--hover md-fake-btn--no-outline md-selection-control-toggle md-btn md-btn--icon md-text--theme-secondary"
                      role="checkbox"
                      tabindex="0"
                    >
                      <div
                        class="md-ink-container"
                      />
                      <i
                        class="md-icon material-icons md-text--inherit"
                      >
                        check_box
                      </i>
                    </div>
                    <span
                      id="has-majority-consent-label"
                    >
                      <div
                        class=""
                      >
                        I am old enough in my local jurisdiction to enter into legal agreements and to consent to the processing of my personal data.
                      </div>
                    </span>
                  </label>
                </div>
                <div
                  class="md-selection-control-container"
                >
                  <input
                    aria-hidden="true"
                    class="md-selection-control-input"
                    id="is-not-gdpr"
                    name="isNotGdpr"
                    type="checkbox"
                    value="true"
                  />
                  <label
                    class="md-selection-control-label md-pointer--hover md-text"
                    for="is-not-gdpr"
                  >
                    <div
                      aria-checked="true"
                      aria-labelledby="is-not-gdpr-label"
                      aria-pressed="true"
                      class="md-fake-btn md-pointer--hover md-fake-btn--no-outline md-selection-control-toggle md-btn md-btn--icon md-text--theme-secondary"
                      role="checkbox"
                      tabindex="0"
                    >
                      <div
                        class="md-ink-container"
                      />
                      <i
                        class="md-icon material-icons md-text--inherit"
                      >
                        check_box
                      </i>
                    </div>
                    <span
                      id="is-not-gdpr-label"
                    >
                      <div
                        class=""
                      >
                        I am not located in the European Union (EU), the European Economic Area (EEA), or in any other jurisdiction that is subject to the General Data Protection Regulation (GDPR).
                      </div>
                    </span>
                  </label>
                </div>
              </section>
              <section
                class="md-dialog-footer--card md-dialog-footer--inline"
              >
                <button
                  class="md-btn md-btn--flat md-btn--text md-pointer--hover md-text md-inline-block"
                  type="button"
                >
                  <div
                    class="md-ink-container"
                  />
                  Cancel
                </button>
                <button
                  class="md-btn md-btn--raised md-btn--text md-pointer--hover md-background--primary md-background--primary-hover md-inline-block"
                  title="Submit"
                  type="submit"
                >
                  <div
                    class="md-ink-container"
                  />
                  Complete Registration
                </button>
              </section>
            </form>
          </section>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`RegistrationConfirmationPage shows error message for missing registration code 1`] = `
<div>
  <div
    id="register-page"
  >
    <div
      class="md-grid"
    >
      <div
        class="md-cell md-cell--12"
      >
        <div
          class="md-paper md-paper--1 md-card md-background--card"
        >
          <div
            class="md-card-title md-card-title--primary"
          >
            <h2
              class="md-card-title--title md-card-title--large md-text"
            >
              Complete Registration
            </h2>
          </div>
          <section
            class="md-card-text"
          >
            <span
              class="error-message"
            >
              Missing registration code
            </span>
          </section>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`RegistrationConfirmationPage shows form 1`] = `
<div>
  <div
    id="register-page"
  >
    <div
      class="md-grid"
    >
      <div
        class="md-cell md-cell--12"
      >
        <div
          class="md-paper md-paper--1 md-card md-background--card"
        >
          <div
            class="md-card-title md-card-title--primary"
          >
            <h2
              class="md-card-title--title md-card-title--large md-text"
            >
              Complete Registration
            </h2>
          </div>
          <section
            class="md-card-text"
          >
            <section
              class="md-card-text"
            >
              Please enter the following to complete your registration
            </section>
            <form>
              <section
                class="md-card-text"
              >
                <ul
                  class="error-message"
                />
                <div
                  class="md-text-field-container md-full-width md-text-field-container--disabled md-text-field-container--multiline"
                >
                  <label
                    class="md-floating-label md-floating-label--floating md-text--disabled"
                    for="email"
                  >
                    Email
                  </label>
                  <div
                    class="md-text-field-multiline-container md-text-field--floating-margin"
                    style="height: 0px;"
                  >
                    <span
                      aria-hidden="true"
                    />
                    <textarea
                      aria-hidden="true"
                      class="md-text-field md-text-field--multiline md-full-width md-text--disabled md-text-field--multiline-mask"
                      readonly=""
                      rows="1"
                      tabindex="-1"
                    >
                      the-email@domain.com
                    </textarea>
                    <textarea
                      autocomplete="email"
                      class="md-text-field md-text-field--multiline md-full-width md-text--disabled"
                      disabled=""
                      id="email"
                      rows="1"
                      style="height: 0px;"
                    >
                      the-email@domain.com
                    </textarea>
                  </div>
                  <hr
                    class="md-divider md-divider--text-field md-divider--expand-from-left"
                  />
                </div>
                <div
                  class="md-text-field-container md-full-width md-text-field-container--multiline"
                >
                  <label
                    class="md-floating-label md-floating-label--inactive md-floating-label--inactive-sized md-text--secondary"
                    for="username"
                  >
                    Username *
                  </label>
                  <div
                    class="md-text-field-multiline-container md-text-field--floating-margin"
                    style="height: 0px;"
                  >
                    <span
                      aria-hidden="true"
                    />
                    <textarea
                      aria-hidden="true"
                      class="md-text-field md-text-field--multiline md-full-width md-text md-text-field--multiline-mask"
                      readonly=""
                      rows="1"
                      tabindex="-1"
                    />
                    <textarea
                      autocomplete="username"
                      class="md-text-field md-text-field--multiline md-full-width md-text"
                      id="username"
                      minlength="3"
                      name="username"
                      required=""
                      rows="1"
                      style="height: 0px;"
                    />
                  </div>
                  <hr
                    class="md-divider md-divider--text-field md-divider--expand-from-left"
                  />
                  <div
                    class="md-text-field-message-container md-text-field-message-container--count-only md-full-width md-text--disabled"
                  >
                    <div
                      aria-hidden="true"
                      class="md-text-field-message md-text-field-message--inactive md-text-field-message--counter"
                    >
                      0 / 64
                    </div>
                  </div>
                </div>
                <div
                  class="md-text-field-container md-full-width md-text-field-container--input"
                >
                  <label
                    class="md-floating-label md-floating-label--inactive md-floating-label--inactive-sized md-text--secondary"
                    for="password"
                  >
                    Password *
                  </label>
                  <input
                    autocomplete="new-password"
                    class="md-text-field md-text-field--inline-indicator md-text-field--floating-margin md-full-width md-text"
                    id="password"
                    minlength="6"
                    name="password"
                    required=""
                    type="password"
                    value=""
                  />
                  <hr
                    class="md-divider md-divider--text-field md-divider--expand-from-left"
                  />
                  <button
                    class="md-text-field-inline-indicator md-password-btn md-pointer--hover md-text-field-inline-indicator--floating md-text--disabled"
                    type="button"
                  >
                    <i
                      class="md-icon material-icons"
                    >
                      remove_red_eye
                    </i>
                  </button>
                  <div
                    class="md-text-field-message-container md-text-field-message-container--count-only md-text-field-message-container--right-icon-offset md-full-width md-text--disabled"
                  >
                    <div
                      aria-hidden="true"
                      class="md-text-field-message md-text-field-message--inactive md-text-field-message--counter"
                    >
                      0 / 64
                    </div>
                  </div>
                </div>
                <div
                  class="md-text-field-container md-full-width md-text-field-container--multiline"
                >
                  <label
                    class="md-floating-label md-floating-label--inactive md-floating-label--inactive-sized md-text--secondary"
                    for="long-name"
                  >
                    Full Name *
                  </label>
                  <div
                    class="md-text-field-multiline-container md-text-field--floating-margin"
                    style="height: 0px;"
                  >
                    <span
                      aria-hidden="true"
                    />
                    <textarea
                      aria-hidden="true"
                      class="md-text-field md-text-field--multiline md-full-width md-text md-text-field--multiline-mask"
                      readonly=""
                      rows="1"
                      tabindex="-1"
                    />
                    <textarea
                      autocomplete="name"
                      class="md-text-field md-text-field--multiline md-full-width md-text"
                      id="long-name"
                      name="longName"
                      required=""
                      rows="1"
                      style="height: 0px;"
                    />
                  </div>
                  <hr
                    class="md-divider md-divider--text-field md-divider--expand-from-left"
                  />
                  <div
                    class="md-text-field-message-container md-text-field-message-container--count-only md-full-width md-text--disabled"
                  >
                    <div
                      aria-hidden="true"
                      class="md-text-field-message md-text-field-message--inactive md-text-field-message--counter"
                    >
                      0 / 64
                    </div>
                  </div>
                </div>
                <div
                  class="md-text-field-container md-full-width md-text-field-container--multiline"
                >
                  <label
                    class="md-floating-label md-floating-label--inactive md-floating-label--inactive-sized md-text--secondary"
                    for="short-name"
                  >
                    First Name
                  </label>
                  <div
                    class="md-text-field-multiline-container md-text-field--floating-margin"
                    style="height: 0px;"
                  >
                    <span
                      aria-hidden="true"
                    />
                    <textarea
                      aria-hidden="true"
                      class="md-text-field md-text-field--multiline md-full-width md-text md-text-field--multiline-mask"
                      readonly=""
                      rows="1"
                      tabindex="-1"
                    />
                    <textarea
                      autocomplete="given-name"
                      class="md-text-field md-text-field--multiline md-full-width md-text"
                      id="short-name"
                      name="shortName"
                      rows="1"
                      style="height: 0px;"
                    />
                  </div>
                  <hr
                    class="md-divider md-divider--text-field md-divider--expand-from-left"
                  />
                  <div
                    class="md-text-field-message-container md-text-field-message-container--count-only md-full-width md-text--disabled"
                  >
                    <div
                      aria-hidden="true"
                      class="md-text-field-message md-text-field-message--inactive md-text-field-message--counter"
                    >
                      0 / 32
                    </div>
                  </div>
                </div>
                <div
                  class="md-selection-control-container"
                >
                  <input
                    aria-hidden="true"
                    class="md-selection-control-input"
                    id="does-accept-terms"
                    name="doesAcceptTerms"
                    type="checkbox"
                    value="true"
                  />
                  <label
                    class="md-selection-control-label md-pointer--hover md-text"
                    for="does-accept-terms"
                  >
                    <div
                      aria-checked="false"
                      aria-labelledby="does-accept-terms-label"
                      aria-pressed="false"
                      class="md-fake-btn md-pointer--hover md-fake-btn--no-outline md-selection-control-toggle md-btn md-btn--icon md-text--secondary"
                      role="checkbox"
                      tabindex="0"
                    >
                      <div
                        class="md-ink-container"
                      />
                      <i
                        class="md-icon material-icons md-text--inherit"
                      >
                        check_box_outline_blank
                      </i>
                    </div>
                    <span
                      id="does-accept-terms-label"
                    >
                      <div
                        class=""
                      >
                        I have read and agree to the
                         
                        <a
                          class="text-link"
                          href="/policies/user-agreement"
                          target="_blank"
                        >
                          User Agreement
                        </a>
                         
                        and the
                         
                        <a
                          class="text-link"
                          href="/policies/privacy-policy"
                          target="_blank"
                        >
                          Privacy Policy
                        </a>
                        .
                      </div>
                    </span>
                  </label>
                </div>
                <div
                  class="md-selection-control-container"
                >
                  <input
                    aria-hidden="true"
                    class="md-selection-control-input"
                    id="is-13-years-or-older"
                    name="is13YearsOrOlder"
                    type="checkbox"
                    value="true"
                  />
                  <label
                    class="md-selection-control-label md-pointer--hover md-text"
                    for="is-13-years-or-older"
                  >
                    <div
                      aria-checked="false"
                      aria-labelledby="is-13-years-or-older-label"
                      aria-pressed="false"
                      class="md-fake-btn md-pointer--hover md-fake-btn--no-outline md-selection-control-toggle md-btn md-btn--icon md-text--secondary"
                      role="checkbox"
                      tabindex="0"
                    >
                      <div
                        class="md-ink-container"
                      />
                      <i
                        class="md-icon material-icons md-text--inherit"
                      >
                        check_box_outline_blank
                      </i>
                    </div>
                    <span
                      id="is-13-years-or-older-label"
                    >
                      <div
                        class=""
                      >
                        I am 13 years old or older.
                      </div>
                    </span>
                  </label>
                </div>
                <div
                  class="md-selection-control-container"
                >
                  <input
                    aria-hidden="true"
                    class="md-selection-control-input"
                    id="has-majority-consent"
                    name="hasMajorityConsent"
                    type="checkbox"
                    value="true"
                  />
                  <label
                    class="md-selection-control-label md-pointer--hover md-text"
                    for="has-majority-consent"
                  >
                    <div
                      aria-checked="false"
                      aria-labelledby="has-majority-consent-label"
                      aria-pressed="false"
                      class="md-fake-btn md-pointer--hover md-fake-btn--no-outline md-selection-control-toggle md-btn md-btn--icon md-text--secondary"
                      role="checkbox"
                      tabindex="0"
                    >
                      <div
                        class="md-ink-container"
                      />
                      <i
                        class="md-icon material-icons md-text--inherit"
                      >
                        check_box_outline_blank
                      </i>
                    </div>
                    <span
                      id="has-majority-consent-label"
                    >
                      <div
                        class=""
                      >
                        I am old enough in my local jurisdiction to enter into legal agreements and to consent to the processing of my personal data.
                      </div>
                    </span>
                  </label>
                </div>
                <div
                  class="md-selection-control-container"
                >
                  <input
                    aria-hidden="true"
                    class="md-selection-control-input"
                    id="is-not-gdpr"
                    name="isNotGdpr"
                    type="checkbox"
                    value="true"
                  />
                  <label
                    class="md-selection-control-label md-pointer--hover md-text"
                    for="is-not-gdpr"
                  >
                    <div
                      aria-checked="false"
                      aria-labelledby="is-not-gdpr-label"
                      aria-pressed="false"
                      class="md-fake-btn md-pointer--hover md-fake-btn--no-outline md-selection-control-toggle md-btn md-btn--icon md-text--secondary"
                      role="checkbox"
                      tabindex="0"
                    >
                      <div
                        class="md-ink-container"
                      />
                      <i
                        class="md-icon material-icons md-text--inherit"
                      >
                        check_box_outline_blank
                      </i>
                    </div>
                    <span
                      id="is-not-gdpr-label"
                    >
                      <div
                        class=""
                      >
                        I am not located in the European Union (EU), the European Economic Area (EEA), or in any other jurisdiction that is subject to the General Data Protection Regulation (GDPR).
                      </div>
                    </span>
                  </label>
                </div>
              </section>
              <section
                class="md-dialog-footer--card md-dialog-footer--inline"
              >
                <button
                  class="md-btn md-btn--flat md-btn--text md-pointer--hover md-text md-inline-block"
                  type="button"
                >
                  <div
                    class="md-ink-container"
                  />
                  Cancel
                </button>
                <button
                  class="md-btn md-btn--flat md-btn--text md-pointer--hover md-text md-inline-block md-btn--raised-disabled md-text--disabled"
                  title="Please complete the form to continue"
                  type="submit"
                >
                  <div
                    class="md-ink-container"
                  />
                  Complete Registration
                </button>
              </section>
            </form>
          </section>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`RegistrationConfirmationPage shows success message upon confirmation. 1`] = `
<div>
  <div
    id="register-page"
  >
    <div
      class="md-grid"
    >
      <div
        class="md-cell md-cell--12"
      >
        <div
          class="md-paper md-paper--1 md-card md-background--card"
        >
          <div
            class="md-card-title md-card-title--primary"
          >
            <h2
              class="md-card-title--title md-card-title--large md-text"
            >
              Complete Registration
            </h2>
          </div>
          <section
            class="md-card-text"
          >
            <section
              class="md-card-text"
            >
              You are now logged in.
            </section>
            <section
              class="md-dialog-footer--card md-dialog-footer--inline"
            >
              <a
                class="md-btn md-btn--raised md-btn--text md-pointer--hover md-background--primary md-background--primary-hover md-inline-block"
                href="/recent-activity"
              >
                <div
                  class="md-ink-container"
                />
                Go to recent activity
              </a>
            </section>
          </section>
        </div>
      </div>
    </div>
  </div>
</div>
`;
